Version CVS HEAD (?)

  * packaging changes:
    - added autoconf checks for pthread library
    - added autoconf check for pthread bug found on certain NPTL-enabled
      glibc versions (see Gentoo bug report #194076)

Version 0.5.0 (15 October 2007)

  * packaging changes:
    - config.h is not going to be installed along with liblinuxsampler's
      API header files anymore
    - only the API relevant header (and source) files will be exported to
      the Doxygen API documentation (explicitly listed in Doxyfile.in)
    - added completely new XCode project files for Mac OSX which is now
      capable to execute our autoconf environment, thus no need anymore
      to maintain the compile time configuration file (osx/version.h) for
      OSX manually (patch by Toshi Nagata)
    - fixed buggy boolean --enable-foo / --disable-foo configure script
      parameters
    - global.h now only covers global definitions that are needed for the
      C++ API header files, all implementation internal global definitions
      are now in global_private.h
    - atomic.h is not exposed to the C++ API anymore
    - no need to include config.h anymore for using LS's API header files
    - fixed warnings in API doc generation

  * general changes:
    - replaced the old, confusing MIDI program change mechanism by a
      flexible MIDI instrument mapper which allows to map arbitrary
      (MIDI bank, MIDI program) pairs with arbitrary
      (engine type, instrument file, file index) triplets which will be
      loaded on the respective channel when such MIDI program change
      messages arrive, beside that, each entry allows to define a life-time
      strategy for the instrument, so the user can define whether the
      instrument should i.e. be permanently loaded (to be able to switch
      quickly among sounds) or i.e. loaded just on demand when the
      respective program change arrives (to safe RAM space), as well as a